--- a/notebook_2_salePatterns/Visualizing_Time_Series_Dataset_Retail_Sales_Data.ipynb
+++ b/notebook_2_salePatterns/Visualizing_Time_Series_Dataset_Retail_Sales_Data.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOToFYQGUd/qqsJMAQrXhXi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "_5m5OtYbkbVu"
       },
@@ -172,9 +171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULXkY1tfmMEl",
-        "outputId": "b6ecba39-d80b-4670-97fb-eaf4d88f2bb3"
+        "outputId": "1f8edaa6-0a48-405d-c755-238de7c9ca59"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,10 +199,38 @@
     {
       "cell_type": "markdown",
       "source": [
+        "* To get more info about metadata of the dataset refer to README file in the root of this notebook directory"
+      ],
+      "metadata": {
+        "id": "-oWFZM3IGqj9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "## EDA including visualization"
       ],
       "metadata": {
         "id": "M5cww6N5dpGX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Plot 1:\n",
+        "\n",
+        "Monthly Revenue Over Time  \n",
+        "\n",
+        "Visualizing monthly revenue helps us understand sales trends across the year.  \n",
+        "Are there peaks during certain months (like festivals or holidays)? Let’s find out."
+      ],
+      "metadata": {
+        "id": "RrlBlNfcHCsY"
       }
     },
     {
@@ -245,7 +272,7 @@
         "id": "YTklIlCqmO9d",
         "outputId": "fd2da3ce-06e3-4a16-b167-66862e270cc0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,6 +295,57 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q. Can you interpret the above bar diagram?\n",
+        "\n",
+        "Q. What are your key takeaways?"
+      ],
+      "metadata": {
+        "id": "XqQEHcwnHYYF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "###❓ Question:  \n",
+        "\n",
+        "Plot the weekly revenue trend instead of monthly. What differences do you notice?\n"
+      ],
+      "metadata": {
+        "id": "UHJw9w9lHJG2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RRH_Tb2uHML-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "###Plot 2\n",
+        "\n",
+        "Now well try to visualize the overall sales over all the product categories and infer about what product category is best selling."
+      ],
+      "metadata": {
+        "id": "GebAzkiVHlEG"
+      }
     },
     {
       "cell_type": "code",
@@ -294,7 +372,7 @@
         "id": "HvJ3ITilv5zR",
         "outputId": "d095b2e8-1cb1-49cf-cc62-baf22d563a94"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,6 +385,98 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q. Now tell me which of the category has done the biggest contribution to the revenue?"
+      ],
+      "metadata": {
+        "id": "WC6xvdPwH-9v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9HI0SjmNJAXY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "###❓ Question:  \n",
+        "What if we want to visualize the **top 5 customers** by total spending?  \n",
+        "Try writing the code to generate a bar chart!  "
+      ],
+      "metadata": {
+        "id": "igShwe7IImJX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qlExSVAYIvWf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QcqPT_h9Iv7-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculate the average order value (AOV) per customer and plot them with a suitable diagram. Which customers have unusually high AOVs?"
+      ],
+      "metadata": {
+        "id": "MJ11BSj-JOo8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gEZQGn79JXvt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "###Plot 3\n",
+        "\n",
+        "\n",
+        "After inspecting the contribution of each categories towards the total revenue we can say which categot=ry has contributed how much but it's necessary to get a relative quantification to compare between the categories' contribution.\n",
+        "\n",
+        "So, we'll now see a donut chart of revenue contributions by each category"
+      ],
+      "metadata": {
+        "id": "THdaXP4yJBrg"
+      }
     },
     {
       "cell_type": "code",
@@ -332,9 +502,9 @@
           "height": 522
         },
         "id": "UlODzrCTwg9S",
-        "outputId": "bb6661b1-32fd-4c37-dcec-a134455e010a"
+        "outputId": "ed2523f8-4ca9-4214-cde3-e4254d48c4e7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -349,6 +519,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Q. Was chosing donut chart a wise choice according to you?"
+      ],
+      "metadata": {
+        "id": "NWKMCV2qLliO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q. What else we could have come up with apart from donut chart to server the same purpose?"
+      ],
+      "metadata": {
+        "id": "l8HQqLv8LwS_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "##Task:\n",
+        "Plot a cumulative revenue line chart. How does this help in understanding long-term sales growth?"
+      ],
+      "metadata": {
+        "id": "2-cLlCYjL4Ke"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -356,6 +558,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "# Assisgnment\n",
+        "\n",
+        "### Find a similar dataset of your choice and perform detailed EDA with proper visualization and infer about the dataset.\n"
+      ],
+      "metadata": {
+        "id": "oha4C4f4MHgV"
+      }
     }
   ]
 }
